# Quantum-walk-project

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile  pyproject.toml  run
python/: qrw
python/quantum_walk_project/: main.py  walkv1.py  walkv2.py  walkv3.py  walkv4.py
src/: lib.rs  main.rs  structs.rs  walk.rs  walkv1.rs  walkv2.rs  walkv3.rs
