[package]
name = "Quantum-walk-project"
version = "0.1.0"
edition = "2024"

[lib]
name = "quantum_walk_project"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
indicatif = "0.17.11"
linreg = "0.2.0"
pyo3 = "0.23.4"
rand = "0.9.0"
rand_pcg = "0.9.0"
rayon = "1.10.0"
